# friendbench

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  netlify.toml  pyproject.toml
benchmarks/: cli.py  models.py
benchmarks/friendbench/: CLAUDE.md  netlify.toml  package-lock.json  package.json  tasks.py
benchmarks/friendbench/data/: ATTRIBUTION.md  eq_bench_v2_questions_171.json  models.yaml  questions.yaml  quotes.yaml  scores.yaml
benchmarks/friendbench/frontend/: index.html
benchmarks/litbench/: CLAUDE.md  run.py
benchmarks/pressbench/: CLAUDE.md  TODO.md  netlify.toml  package-lock.json  package.json  tasks.py
benchmarks/pressbench/data/: models.yaml  scores.yaml
benchmarks/pressbench/frontend/: index.html
data/: models.json  models.jsonc  models.yaml  questions.yaml  quotes.json  quotes.jsonc
evals/: pyproject.toml  review_logs.py
evals/src/: cli.py  models.py  tasks.py
frontend/: data.js  index.html
netlify/: build.js  validate-build.js
netlify/functions/: api.js  get-data.js
server/: main.py
