[project]
name = "friendbench-evals"
version = "0.1.0"
description = "Proxy evals for FriendBench"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.83.0",
    "click>=8.2.1",
    "inspect-ai>=0.3",
    "openai>=2.22.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
]

[project.scripts]
fb = "src.cli:fb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
